Update build.gradle
fixing the test run.